--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"firebase": "^10.3.1",
+		"firebase": "^10.9.0",
 		"firebase-admin": "^11.10.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -28,5 +28,15 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"typescript": "^5.0.2",
 		"vite": "^4.5.14"
+	},
+	"resolutions": {
+		"protobufjs": "^7.2.5",
+		"@babel/traverse": "^7.23.2",
+		"cross-spawn": "^7.0.5",
+		"braces": "^3.0.3",
+		"esbuild": "^0.25.0",
+		"micromatch": "^4.0.8",
+		"@grpc/grpc-js": "^1.8.22",
+		"jose":"4.15.5"
 	}
 }
