--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"esbuild": "^0.25.0",
 		"micromatch": "^4.0.8",
 		"@grpc/grpc-js": "^1.8.22",
-		"jose": "4.15.5"
+		"jose": "^4.15.5",
+		"undici": "^6.21.2"
 	}
 }
